tests/ui/invalid_macro_args.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/lib.rs:1:12
  |
1 | #![feature(specialization)]
  |            ^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
  = help: consider using `min_specialization` instead, which is more stable and complete

warning: use of deprecated associated function `std::sync::atomic::AtomicBool::compare_and_swap`: Use `compare_exchange` or `compare_exchange_weak` instead
   --> $DIR/type_object.rs:186:14
    |
186 |             .compare_and_swap(false, true, Ordering::Acquire)
    |              ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated associated function `std::sync::atomic::AtomicBool::compare_and_swap`: Use `compare_exchange` or `compare_exchange_weak` instead
   --> $DIR/type_object.rs:222:14
    |
222 |             .compare_and_swap(false, true, Ordering::Acquire)
    |              ^^^^^^^^^^^^^^^^

warning: 3 warnings emitted

error: Positional argument or varargs(*) is not allowed after keyword arguments
 --> $DIR/invalid_macro_args.rs:3:21
  |
3 | #[pyfunction(a = 5, b)]
  |                     ^

error: Positional argument or varargs(*) is not allowed after *
 --> $DIR/invalid_macro_args.rs:8:22
  |
8 | #[pyfunction(a, "*", b)]
  |                      ^

error: Keyword argument or kwargs(**) is not allowed after kwargs(**)
  --> $DIR/invalid_macro_args.rs:13:29
   |
13 | #[pyfunction(kwargs = "**", a = 5)]
   |                             ^^^^^
